--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
   height: 100vh;
 }
 
-body. html {
+body.html {
   margin: 0;
   padding: 0;
 
@@ -34,7 +34,7 @@ body. html {
 
 .container {
   width: 600px;
-  height: 600px;
+  height: 800px;
   background-color: #f2eecb;
   border-radius: 4px;
 
@@ -55,6 +55,7 @@ body. html {
 
 .header-title {
   flex: 1;
+  text-align: center;
 
   font-size: 3.6rem;
   font-family: "Homemade Apple", sans-serif;
@@ -65,9 +66,47 @@ body. html {
   font-size: 1.8rem;
   font-family: "Bungee", sans-serif;
 
-  padding: 24px;
+  padding: 16px;
+  cursor: pointer;
 
   background: unset;
   border: unset;
   outline: unset;
+}
+
+.add {
+  padding: 16px;
+}
+
+.add-form {
+  display: flex;
+  align-items: flex-start;
+}
+
+.add-input {
+  background: unset;
+  border: unset;
+  padding: 0 64px;
+
+  flex: 1;
+
+  border-bottom: 1px solid var(--warna-merah);
+  outline: unset;
+
+  font-family: "Homemade Apple", sans-serif;
+  font-size: 16px;
+  text-transform: lowercase;
+}
+
+.add-btn {
+  font-size: 1.8rem;
+  font-family: "Bungee", sans-serif;
+
+  padding: 16px;
+  padding-right: unset;
+  cursor: pointer;
+
+  background: unset;
+  outline: unset;
+  border: unset;
 }
